# sistema-fly

./: .gitignore  .rsignore  Makefile  compose.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-traefik.yml  nginx.conf  ssl-scripts.sh
.github/workflows/: prod.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  docker-compose-dev.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  constants.py  database.py  exceptions.py  main.py  seed.py  utils.py
backend/app/auth/: constants.py  exceptions.py  router.py  schemas.py  services.py
backend/app/helpers/: seed.py
backend/app/product/: constants.py  dependencies.py  exceptions.py  model.py  router.py  schemas.py  service.py
backend/app/product/brand/: constants.py  exceptions.py  model.py  router.py  schemas.py  service.py
backend/app/product/category/: constants.py  exceptions.py  model.py  router.py  schemas.py  service.py
backend/app/security/: jwt.py
backend/app/user/: constants.py  dependencies.py  exceptions.py  model.py  router.py  schemas.py  service.py
backend/infra/prod/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 1ce24a46bab3_init.py  a2af89f54409_update.py  cad0d78e220c_init.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20241231173016_init/: migration.sql
backend/prisma/migrations/20241231173744_create_indexes/: migration.sql
backend/prisma/migrations/20241231214918_update_lenght_zip_code/: migration.sql
backend/prisma/migrations/20241231215341_update_lenght_zip_code_to_nine/: migration.sql
backend/scripts/: entrypoint.sh
backend/src/: app.module.ts  main.ts
backend/src/helpers/: password-hash.ts
backend/src/prisma/: prisma.service.ts
backend/src/user/: enums.ts
backend/src/user/entities/: user.entity.ts
frontend/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/nginx/sites-available/: sistemafly.conf
frontend/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/assets/css/: index.css
frontend/src/components/ui/: accordion.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  label.tsx  pagination.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx
frontend/src/constants/: index.ts
frontend/src/helpers/: cookies.ts
frontend/src/interface/: EnumMenuSelect.ts  IBrand.ts  ICategory.ts  ILoginResponse.ts  IProducts.ts  IUser.ts
frontend/src/layout/: main-layout.tsx
frontend/src/pages/: index.ts  login.tsx  not-found.tsx
frontend/src/routes/: __root.tsx  _dashboard.tsx  index.tsx
frontend/src/services/: api.ts  fetch-all-brands.ts  fetch-all-categories.ts  fetch-all-products.ts  fetch-create-product.ts  fetch-data-user.ts  fetch-login.ts  fetch-update-user.ts  index.ts
frontend/src/stores/: user.ts
frontend/src/utils/: formatters.ts  inputs-sanitize.ts  logout.ts  title-pathname.ts
infra/prod/postgres/: Dockerfile
scripts/: deploy.sh
(+25 files in other folders)
