[project]
name = "backend"
version = "0.0.1"
description = "Api for the backend sistema fly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "humanize>=4.11.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.3",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-barcode[images]>=0.15.1",
    "python-multipart>=0.0.20",
    "sentry-sdk[fastapi]>=2.19.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.8.4", "taskipy>=1.14.1"]

[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLW0108', 'PLR2004', 'PLW2901', 'PLR0916', 'PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev app/main.py'
start = 'uvicorn app.main:app --host 0.0.0.0 --workers 4'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
makemigrations = 'alembic revision --autogenerate -m'
migrate = 'alembic upgrade head'
